@@ -4,6 +4,8 @@ Changes
 1.1.5 (TBD)
 ------------------
 
+- MemoryFile implementation has been improved so that it can support multi-part
+  S3 downloads (#1926).
 - To help users of poetry, the conditional requirements in setup.py have been
   changed to use PEP 496 environment markers exclusively (#1777).
 
